use structured logging and error handline
Signed-off-by: Tejas Parikh <tejas@tejasparikh.com>

--- a/cmd/objectstorage-sample-driver/Dockerfile
+++ b/cmd/objectstorage-sample-driver/Dockerfile
@@ -2,5 +2,5 @@ FROM gcr.io/distroless/static:latest
 LABEL maintainers="Kubernetes Authors"
 LABEL description="Object Storage Sample Driver"
 
-COPY ./bin/sample-driver sample-driver
-ENTRYPOINT ["/sample-driver"]
+COPY ./bin/objectstorage-sample-driver objectstorage-sample-driver
+ENTRYPOINT ["/objectstorage-sample-driver"]
